Temporarily hide unused setting in the UI

--- a/client/sidebar.html
+++ b/client/sidebar.html
@@ -105,8 +105,11 @@
             <h5>At the end of a word:</h5>
             <label><input type="checkbox" name="settingEndWordBack" value="back" checked={{isSettingChecked 'settingEndWordBack' 'back' false}}>
             Jump back to first blank in the word (if any)</label><br>
+            <!--
+            // will add support for this. probably.
             <label><input type="checkbox" name="settingEndWordNext" value="next" checked={{isSettingChecked 'settingEndWordNext' 'next' false}}>
             Jump to the next clue (if not jumping back)</label><br>
+            -->
           </form>
         </div>
         <div class="modal-footer">
